--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
   "description": "",
   "dependencies": {
     "@notionhq/client": "^2.2.15",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "knex": "^3.1.0",
+    "mysql2": "^3.10.1"
   }
 }
