--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "pull": "node utils/syncNotionToDb.js full",
-    "partial": "node utils/syncNotionToDb.js partial"
+    "partial": "node utils/syncNotionToDb.js partial",
+    "seed": "npx knex seed:run"
   },
   "keywords": [],
   "author": "",
