--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "pull": "node utils/syncNotionToDb.js full",
     "partial": "node utils/syncNotionToDb.js partial",
     "migrate": "npx knex migrate:latest",
+    "rollback": "npx knex migrate:rollback",
     "seed": "npx knex seed:run"
   },
   "keywords": [],
