--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "partial": "node utils/syncNotionToDb.js partial",
     "migrate": "npx knex migrate:latest",
     "rollback": "npx knex migrate:rollback",
-    "seed": "npx knex seed:run"
+    "seed": "npx knex seed:run",
+    "test-seed": "npm run seeds/exercise.js"
   },
   "keywords": [],
   "author": "",
