--- a/app/package.json
+++ b/app/package.json
@@ -2,6 +2,7 @@
   "name": "app1",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,6 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "mysql2": "^3.10.2",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
