--- a/src/package.json
+++ b/src/package.json
@@ -9,7 +9,7 @@
     "migrate": "npx knex migrate:latest",
     "rollback": "npx knex migrate:rollback",
     "seed": "npx knex seed:run",
-    "test-seed": "npm run seeds/exercise.js"
+    "test-seed": "node seeds/exercise.js"
   },
   "keywords": [],
   "author": "",
