--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "mysql2": "^3.10.2",
     "next": "14.2.4",
