Create migration for `program` table

--- a/src/package.json
+++ b/src/package.json
@@ -7,6 +7,7 @@
     "pull": "node utils/syncNotionToDb.js full",
     "partial": "node utils/syncNotionToDb.js partial",
     "migrate": "npx knex migrate:latest",
+    "migrate1": "npx knex migrate:up 20240709225643_activity_tables.js",
     "rollback": "npx knex migrate:rollback",
     "seed": "npx knex seed:run",
     "test-seed": "node seeds/exercise.js"
