--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "mysql2": "^3.10.2",
     "next": "14.2.4",
     "react": "^18",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18",
     "sass": "^1.77.6"
   },
