--- a/app/package.json
+++ b/app/package.json
@@ -15,9 +15,11 @@
     "dotenv": "^16.4.5",
     "mysql2": "^3.10.2",
     "next": "14.2.4",
+    "plotly.js": "^2.33.0",
     "react": "^18",
     "react-calendar": "^5.0.0",
     "react-dom": "^18",
+    "react-plotly.js": "^2.6.0",
     "sass": "^1.77.6"
   },
   "devDependencies": {
