Updated data processing seeding to seed tables
Renamed `session.user` to `session.user_id` to avoid SQL keyword issue

--- a/src/package.json
+++ b/src/package.json
@@ -7,11 +7,11 @@
     "pull": "node utils/syncNotionToDb.js full",
     "partial": "node utils/syncNotionToDb.js partial",
     "migrate": "npx knex migrate:latest",
-    "migrate1": "npx knex migrate:up 20240709225643_activity_tables.js",
     "rollback": "npx knex migrate:rollback",
-    "rollback1": "npx knex migrate:down 20240709225643_activity_tables.js",
     "seed": "npx knex seed:run",
-    "test-seed": "node seeds/exercise.js"
+    "test-seed": "node seeds/exercise.js",
+    "migrate1": "npx knex migrate:up 20240709225643_activity_tables.js",
+    "rollback1": "npx knex migrate:down 20240709225643_activity_tables.js"
   },
   "keywords": [],
   "author": "",
