--- a/src/package.json
+++ b/src/package.json
@@ -9,7 +9,7 @@
     "migrate": "npx knex migrate:latest",
     "rollback": "npx knex migrate:rollback",
     "seed": "npx knex seed:run",
-    "test-seed": "node seeds/exercise.js",
+    "test-seed": "node seeds/1_content.js",
     "migrate1": "npx knex migrate:up 20240709225643_activity_tables.js",
     "rollback1": "npx knex migrate:down 20240709225643_activity_tables.js"
   },
