Implementation instructions for BrainStation grading

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,7 +1,28 @@
-# See project submission comments on Synapse for additional environmental variables required for extracting data from Notion.
+
 
 PORT=PORT_NUMBER
 DB_HOST=127.0.0.1
 DB_NAME=movement_snack_submission
 DB_USER=YOUR_MYSQL_USERNAME
 DB_PASSWORD=YOUR_MYSQL_PASSWORD
+
+# Environmental variables for data extraction from Notion
+
+# See project submission comments on Synapse for additional environmental variables required for extracting data from Notion.
+
+notion_secret=
+notion_database=
+EXERCISE_DATABASE=
+MOVEMENT_DATABASE=
+MUSCLE_DATABASE=
+MODIFIER_DATABASE=
+FOCUS_DATABASE=
+DISCREETNESS_DATABASE=
+CONTEXT_DATABASE=
+ENVIRONMENT_DATABASE=
+USER_DATABASE=
+SESSION_DATABASE=
+ACTIVITY_DATABASE=
+TIP_DATABASE=
+VIDEO_DATABASE=
+PROGRAM_DATABASE=
