Update migration; pulled new data
- Previously, `program` table was not related to any other table
- Added new records to `video` table; updated exercise data accordingly

--- a/app/.env.local.example
+++ b/app/.env.local.example
@@ -1,5 +1,5 @@
 DB_HOST=127.0.0.1
-DB_NAME=movement_snack_submission
+DB_NAME=movement_snack
 DB_USER=YOUR_DB_USERNAME
 DB_PASSWORD=YOUR_DB_PASSWORD
 API_URL=http://127.0.0.1:3000
