--- a/src/.env.example
+++ b/src/.env.example
@@ -2,7 +2,7 @@
 
 PORT=PORT_NUMBER
 DB_HOST=127.0.0.1
-DB_NAME=movement_snack_submission
+DB_NAME=movement_snack
 DB_USER=YOUR_MYSQL_USERNAME
 DB_PASSWORD=YOUR_MYSQL_PASSWORD
 
